# paagen

./: .gitignore  CHANGELOG.md  README.md  admixpops_test.R  cabal.project  generators.Rproj  paagen.cabal  runAdmixture.sh  stack.yaml  technical_helpers.R
.github/workflows/: normalCheck.yml  release.yml
playground/: admixpops_test.R  runAdmixture.sh  spacetime_test.R  technical_helpers.R  test_workflow.ipynb
src-executables/: Main-paagen.hs
src/Paagen/: Parsers.hs  SampleGeno.hs  Types.hs  Utils.hs
src/Paagen/CLI/: AdmixPops.hs  SpaceTime.hs
