name:                paagen
version:             0.1.0
synopsis:            ...
description:         ...
license:             MIT
license-file:        LICENSE
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

executable paagen
    main-is:            Main-paagen.hs
    hs-source-dirs:     src-executables
    build-depends:      base, optparse-applicative, poseidon-hs, filepath, vector, sequence-formats, 
                        pipes-safe, pipes, ansi-terminal, MonadRandom, parsec, parsec3-numbers
    other-modules:      Paths_paagen
    default-language:   Haskell2010

