name:                paagen
version:             0.1.0
synopsis:            ...
description:         ...
license:             MIT
license-file:        LICENSE
author:              Clemens Schmid
maintainer:          clemens@nevrome.de
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

library
    exposed-modules:    Paagen.Parsers, Paagen.Types, Paagen.Utils, 
                        Paagen.CLI.SpaceTime, Paagen.CLI.AdmixPops
    hs-source-dirs:     src
    build-depends:      poseidon-hs, base, filepath, vector, sequence-formats, 
                        pipes-safe, pipes, MonadRandom, ansi-terminal, directory,
                        parsec, parsec3-numbers
    default-language:   Haskell2010

executable paagen
    main-is:            Main-paagen.hs
    hs-source-dirs:     src-executables
    build-depends:      paagen, poseidon-hs, base, optparse-applicative, filepath, 
                        MonadRandom
    other-modules:      Paths_paagen
    default-language:   Haskell2010

